tests/frontend_syntax/invalid/bad_extern.vit
space vitte/compiler/demo

extern proc bad() -> int;
